Re designed the ad div with a background vid and a map of EU, fixed header carousel to hide on small screens

--- a/static/css/general-styles.css
+++ b/static/css/general-styles.css
@@ -232,34 +232,8 @@ textarea {
   .label {
     border: 1px solid #000;
   }
-  /* .table {
-    border-collapse: collapse !important;
-  }
-  .table td,
-  .table th {
-    background-color: #fff !important;
-  } */
-  /* .table-bordered th,
-  .table-bordered td {
-    border: 1px solid #ddd !important;
-  } */
 }
-/* @font-face {
-  font-family: 'Glyphicons Halflings';
-  src: url('../fonts/glyphicons-halflings-regular.eot');
-  src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
-}
-.glyphicon {
-  position: relative;
-  top: 1px;
-  display: inline-block;
-  font-family: 'Glyphicons Halflings';
-  font-style: normal;
-  font-weight: normal;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-} */
+
 * {
   box-sizing: border-box;
 }
